--- a/index.css
+++ b/index.css
@@ -34,6 +34,10 @@ a {
         margin: 2%;
         width: 20%;
     }
+    .hbday {
+        height: 250px;
+        width: 900px;
+    }
 }
 
 @media screen and (max-width: 600px) {
