--- a/index.css
+++ b/index.css
@@ -14,7 +14,8 @@ body {
 
 a {
     color: red;
-    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px rgb(0, 247, 255), 0 0 82px rgb(0, 247, 255), 0 0 92px rgb(0, 247, 255), 0 0 102px rgb(0, 247, 255), 0 0 151px rgb(0, 247, 255);
+    color: #fff;
+   animation: glow 1s ease-in-out infinite alternate;
     font-size: 45px;
     font-weight: 900;
 }
@@ -58,4 +59,13 @@ a {
     body {
         background-image: url('./img/2.png')
     }
+}
+@-webkit-keyframes a {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
 }
