--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
     margin: auto;
 }
 
-a {
+.text {
     color: red;
     color: #fff;
    animation: glow 1s ease-in-out infinite alternate;
@@ -60,7 +60,7 @@ a {
         background-image: url('./img/2.png')
     }
 }
-@-webkit-keyframes a {
+@-webkit-keyframes text {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
