--- a/index.css
+++ b/index.css
@@ -12,15 +12,22 @@ body {
     margin: auto;
 }
 
-.text {
+.glow {
     color: red;
     color: #fff;
-   animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
     font-size: 45px;
     font-weight: 900;
 }
 
 @media screen and (min-width: 601px) {
+    .glow {
+        color: red;
+        color: #fff;
+        animation: glow 1s ease-in-out infinite alternate;
+        font-size: 45px;
+        font-weight: 900;
+    }
     a {
         font-size: 45px;
     }
@@ -42,6 +49,13 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+    .glow {
+        color: red;
+        color: #fff;
+        animation: glow 1s ease-in-out infinite alternate;
+        font-size: 25px;
+        font-weight: 900;
+    }
     a {
         color: red;
         font-size: 25px;
@@ -60,12 +74,12 @@ body {
         background-image: url('./img/2.png')
     }
 }
-@-webkit-keyframes text {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
+
+@-webkit-keyframes glow {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
 }
