--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 a {
-    color: white;
+    color: red;
     font-size: 45px;
     font-weight: 900;
     text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px rgb(0, 247, 255), 0 0 82px rgb(0, 247, 255), 0 0 92px rgb(0, 247, 255), 0 0 102px rgb(0, 247, 255), 0 0 151px rgb(0, 247, 255);
@@ -42,7 +42,7 @@ a {
 
 @media screen and (max-width: 600px) {
     a {
-        color: white;
+        color: red;
         font-size: 25px;
         font-weight: 1000;
     }
